--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>survival club: the band</title>
     </head>
     <body>
-        <h3>coming soon</h3>
+        <h3>coming soon!</h3>
     </body>
 </html>
