--- a/index.html
+++ b/index.html
@@ -2,8 +2,68 @@
 <html lang="en">
     <head>
         <title>survival club: the band</title>
-    </head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&family=Rubik+80s+Fade&display=swap" rel="stylesheet">
+   <style>
+    body {
+        background-color: #222;
+        color: #eee;
+        word-break: break-all;
+    }
+    a {
+        color: #eee;
+        text-decoration: underline;
+        font-family: 'Courier New', Courier, monospace;
+        display: inline-block;
+    }
+    a:after {
+        content: ' | ';
+        padding: 0 4px;
+        text-decoration: none;
+    }
+    h1 {
+        font-size: 120px;
+        text-align: center;
+        margin: 0;
+    }
+    .container {
+        width: 90%;
+        margin-left: 5%;
+        margin-bottom: 5%;
+    }
+    .header{
+        margin: 20px 0;
+    }
+    .links {
+        display: block;
+        text-align: center;
+        margin-top: 10px;
+    }
+    .rubik-80s-fade-regular {
+        font-family: "Rubik 80s Fade", system-ui;
+        font-weight: 400;
+        font-style: normal;
+    }
+    .libre-barcode-128-text-regular {
+        font-family: "Libre Barcode 128 Text", system-ui;
+        font-weight: 400;
+        font-style: normal;
+    }
+    img {
+        width: 100%;
+        display: block;
+    }
+   </style>
+</head>
     <body>
-        <h3>coming soon!</h3>
+        <div class="container">
+            <div class="header">
+                <h1 class="rubik-80s-fade-regular">SURVIVAL CLUB</h1>
+                <span class="links"><a href="#">a link</a><a href="#">another link</a></span>
+            </div>
+            <div><img src="img.jpg" /></div>
+        </div>
     </body>
 </html>
