--- a/index.html
+++ b/index.html
@@ -1,69 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>survival club: the band</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&family=Rubik+80s+Fade&display=swap" rel="stylesheet">
-   <style>
-    body {
-        background-color: #222;
-        color: #eee;
-        word-break: break-all;
-    }
-    a {
-        color: #eee;
-        text-decoration: underline;
-        font-family: 'Courier New', Courier, monospace;
-        display: inline-block;
-    }
-    a:after {
-        content: ' | ';
-        padding: 0 4px;
-        text-decoration: none;
-    }
-    h1 {
-        font-size: 120px;
-        text-align: center;
-        margin: 0;
-    }
-    .container {
-        width: 90%;
-        margin-left: 5%;
-        margin-bottom: 5%;
-    }
-    .header{
-        margin: 20px 0;
-    }
-    .links {
-        display: block;
-        text-align: center;
-        margin-top: 10px;
-    }
-    .rubik-80s-fade-regular {
-        font-family: "Rubik 80s Fade", system-ui;
-        font-weight: 400;
-        font-style: normal;
-    }
-    .libre-barcode-128-text-regular {
-        font-family: "Libre Barcode 128 Text", system-ui;
-        font-weight: 400;
-        font-style: normal;
-    }
-    img {
-        width: 100%;
-        display: block;
-    }
-   </style>
+
+<head>
+    <title>survival club: the band</title>
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&family=Rubik+80s+Fade&display=swap"
+        rel="stylesheet">
+    <style>
+        body {
+            background-color: #222;
+            color: #eee;
+            word-break: break-all;
+        }
+
+        a {
+            color: #eee;
+            text-decoration: underline;
+            font-family: 'Courier New', Courier, monospace;
+            display: inline-block;
+        }
+
+        /* a:after {
+            content: ' | ';
+            padding: 0 4px;
+            text-decoration: none;
+        } */
+
+        h1 {
+            font-size: 130px;
+            text-align: center;
+            margin: 0;
+        }
+
+        .container {
+            width: 80%;
+            margin-left: 10%;
+            margin-bottom: 5%;
+        }
+
+        .header {
+            margin: 20px 0;
+        }
+
+        .links {
+            display: block;
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .rubik-80s-fade-regular {
+            font-family: "Rubik 80s Fade", system-ui;
+            font-weight: 400;
+            font-style: normal;
+        }
+
+        .libre-barcode-128-text-regular {
+            font-family: "Libre Barcode 128 Text", system-ui;
+            font-weight: 400;
+            font-style: normal;
+        }
+
+        img {
+            width: 100%;
+            display: block;
+        }
+    </style>
 </head>
-    <body>
-        <div class="container">
-            <div class="header">
-                <h1 class="rubik-80s-fade-regular">SURVIVAL CLUB</h1>
-                <span class="links"><a href="#">a link</a><a href="#">another link</a></span>
-            </div>
-            <div><img src="img.jpg" /></div>
+
+<body>
+    <div class="container">
+        <div class="header">
+            <h1 class="rubik-80s-fade-regular">SURVIVAL CLUB</h1>
+            <span class="links">
+                <a href="https://survivalclub.bandcamp.com/">bandcamp</a>
+                <a href="https://www.instagram.com/survivalclub__/">instagram</a>
+                <a href="https://open.spotify.com/artist/6xUuXjVgnd2zO5hyKfvJFU">spotify</a>
+                <a href="https://music.apple.com/ca/artist/survival-club/1748792490">apple music</a>
+                <a href="mailto:survivalclubtheband@gmail.com">contact</a>
+            </span>
         </div>
-    </body>
+        <div><img src="img.jpg" /></div>
+    </div>
+</body>
+
 </html>
