--- a/index.html
+++ b/index.html
@@ -16,19 +16,17 @@
             word-break: break-all;
         }
 
-        a {
+        .links a {
             color: #eee;
             text-decoration: underline;
             font-family: 'Courier New', Courier, monospace;
             display: inline-block;
+            padding-right: 10px;
+            padding-bottom: 10px;
         }
-
-        /* a:after {
-            content: ' | ';
-            padding: 0 4px;
-            text-decoration: none;
-        } */
-
+        .links a:last-of-type {
+            margin: 0;
+        }
         h1 {
             font-size: 130px;
             text-align: center;
