--- a/index.html
+++ b/index.html
@@ -9,77 +9,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&family=Rubik+80s+Fade&display=swap"
         rel="stylesheet">
-    <style>
-        body {
-            background-color: #222;
-            color: #eee;
-            word-break: break-all;
-        }
-
-        .links a {
-            color: #eee;
-            text-decoration: underline;
-            font-family: 'Courier New', Courier, monospace;
-            display: inline-block;
-            padding-right: 10px;
-            padding-bottom: 10px;
-        }
-        .links a:last-of-type {
-            margin: 0;
-        }
-        h1 {
-            font-size: 130px;
-            text-align: center;
-            margin: 0;
-        }
-
-        .container {
-            width: 80%;
-            margin-left: 10%;
-            margin-bottom: 5%;
-        }
-
-        .header {
-            margin: 20px 0;
-        }
-
-        .links {
-            display: block;
-            text-align: center;
-            margin-top: 10px;
-        }
-
-        .rubik-80s-fade-regular {
-            font-family: "Rubik 80s Fade", system-ui;
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        .libre-barcode-128-text-regular {
-            font-family: "Libre Barcode 128 Text", system-ui;
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        img {
-            width: 100%;
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
-        <div class="header">
+        <header>
             <h1 class="rubik-80s-fade-regular">SURVIVAL CLUB</h1>
-            <span class="links">
-                <a href="https://survivalclub.bandcamp.com/">bandcamp</a>
-                <a href="https://www.instagram.com/survivalclub__/">instagram</a>
-                <a href="https://open.spotify.com/artist/6xUuXjVgnd2zO5hyKfvJFU">spotify</a>
-                <a href="https://music.apple.com/ca/artist/survival-club/1748792490">apple music</a>
-                <a href="mailto:survivalclubtheband@gmail.com">contact</a>
-            </span>
-        </div>
+            <nav>
+                <a href="https://survivalclub.bandcamp.com/" target="_blank">bandcamp</a>
+                <a href="https://www.instagram.com/survivalclub__/" target="_blank">instagram</a>
+                <a href="https://open.spotify.com/artist/6xUuXjVgnd2zO5hyKfvJFU" target="_blank">spotify</a>
+                <a href="https://music.apple.com/ca/artist/survival-club/1748792490" target="_blank">apple music</a>
+                <a href="mailto:survivalclubtheband@gmail.com" target="_blank">contact</a>
+            </nav>
+        </header>
         <div><img src="img.jpg" /></div>
     </div>
 </body>
