img alt and tooltip

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="mailto:survivalclubtheband@gmail.com" target="_blank">contact</a>
             </nav>
         </header>
-        <div><img src="img.jpg" /></div>
+        <div><img src="img.jpg" alt="The band Survival Club" title="Survival Club; photo by Chelsea Williams" /></div>
     </div>
 </body>
 
