Update to logo header

--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <title>survival club: the band</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+80s+Fade&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
         <header>
-            <h1 class="rubik-80s-fade-regular">SURVIVAL CLUB</h1>
+            <img src="logo.png" alt="Survival Club" title="Survival Club" />
             <nav>
                 <a href="https://survivalclub.bandcamp.com/" target="_blank">bandcamp</a>
                 <a href="https://www.instagram.com/survivalclub__/" target="_blank">instagram</a>
@@ -23,7 +20,7 @@
                 <a href="mailto:survivalclubtheband@gmail.com" target="_blank">contact</a>
             </nav>
         </header>
-        <div><img src="img.jpg" alt="The band Survival Club" title="Survival Club; photo by Chelsea Williams" /></div>
+        <div><img class="band" src="img.jpg" alt="The band Survival Club" title="Survival Club; photo by Chelsea Williams" /></div>
     </div>
 </body>
 
